# csp_drone_rtdetr_phase2

./: pyproject.toml  requirements.txt
configs/dataset/: coco_detection.yml
configs/rtdetr/include/: rtdetr_r50vd.yml
src/data/coco/: coco_dataset.py
